--- a/bootcamp-react-movies/src/App.css
+++ b/bootcamp-react-movies/src/App.css
@@ -1,10 +1,1 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-button {
-  border: 1px solid red;
-}
+/*@import url(/node_modules/bootstrap/dist/css/bootstrap.min.css);*/
