--- a/bootcamp-react-movies/src/App.css
+++ b/bootcamp-react-movies/src/App.css
@@ -1,1 +1,7 @@
 /*@import url(/node_modules/bootstrap/dist/css/bootstrap.min.css);*/
+.active {
+    font-size: 2rem;
+}
+.activa {
+    color:red;
+}
